# fresher_play_music_consoleapp

./: CMakeLists.txt  mini_project.docx
controller/: MusicController.cpp  MusicController.h
include/: Algorithms.h  MusicLibrary.h  MusicPlayer.h  PlaybackHistory.h  PlaybackQueue.h  ShuffleManager.h  Song.h
main/: main.cpp
media/SongList/: list_song.txt
source/: Algorithms.cpp  MusicLibrary.cpp  MusicPlayer.cpp  PlaybackHistory.cpp  PlaybackQueue.cpp  ShuffleManager.cpp
view/: ConsoleView.cpp  ConsoleView.h
